# Project_Kathisto

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
assets/: cube.off
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.c
src/game/: CMakeLists.txt  Game.c  Game.h  GameConstants.c  GameConstants.h  Player.c  Player.h
src/game/GameObjects/: Camera.c  Camera.h  Cube.c  Cube.h  Cube2.c  Cube2.h  Floor.c  Floor.h  Ground.c  Ground.h
src/gui/: CMakeLists.txt  Gui.c  Gui.h
src/math/: CMakeLists.txt  Vector.c  Vector.h  math.c  math.h  mathUtils.c  mathUtils.h
src/model/: model.c  model.h
src/window/: CMakeLists.txt  Events.c  Events.h  Window.c  Window.h
